--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="col-lg-6 text-center">
-          <img src="images/nutricionista/nutricionista (2)semfundopreview.png" alt="Nutricionista" class="img-fluid rounded-4 hero-photo" />
+          <img src="images/nutricionista/nutricionista (2).png" alt="Nutricionista" class="img-fluid rounded-4 hero-photo" />
         </div>
       </div>
     </div>
