--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="images/logo.png" sizes="16x16" href="/favicon-16x16.png">
   </head>
   <body>
     
@@ -59,9 +60,9 @@
               Mais de 500 pacientes atendidos em 6 países diferentes. Planos nutricionais personalizados,
               acompanhamento humanizado e foco em resultados sustentáveis.
             </p>
-            <div class="d-flex flex-wrap gap-3 mt-4">
+            <div class="d-flex flex-wrap gap-3 mt-4 justify-content-center">
               <a class="btn btn-primary" href="#pacotes">Ver pacotes</a>
-              <a class="btn btn-outline-light" href="https://wa.me/5521994380258" target="_blank">Fale no WhatsApp</a>
+              <a class="btn btn-outline-light" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank">Fale no WhatsApp</a>
             </div>
           </div>
           <div class="col-lg-6 text-center image-block">
@@ -90,7 +91,7 @@
             <h2 class="section-title">Quem sou eu?</h2>
             <p>
               Formado em Nutrição e pós-graduado em Nutrição Esportiva pela UNIGUAÇU,
-              com cursos de extenção em Nutrição Comportamental e Nutrição Feminina.
+              com cursos de extensão em Nutrição Comportamental e Nutrição Feminina.
               Com mais de 500 pacientes atendidos em 6 países diferentes, meu foco é
               oferecer soluções nutricionais personalizadas, equilibrando saúde e
               bem-estar com metas estéticas e de performance.
@@ -655,8 +656,8 @@
         
         <div class="col-lg-4 col-md-6">
           <a class="d-flex align-items-center gap-2 mb-3 text-decoration-none" href="#topo">
-            <img src="images/logo.png" alt="Logo" class="logo" />
-            <span class="h5 mb-0 text-white fw-bold">MT Ferre Nutrição</span>
+            <img src="images/logoNome.png" alt="Logo" class="logo" />
+            <!--<span class="h5 mb-0 text-white fw-bold">MT Ferre Nutrição</span>-->
           </a>
           <p class="text-white-50 small">
             Transformando vidas através da nutrição personalizada. Atendimento presencial no Rio de Janeiro e online para o mundo todo.
