--- a/index.html
+++ b/index.html
@@ -404,82 +404,82 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesDepois16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesDepois/antesdepois16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
           </div>
@@ -505,52 +505,52 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="carousel-image">
-                <img src="images/musas/musa (1).png" alt="Musa 1" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa1.png" alt="Musa 1" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (2).png" alt="Musa 2" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa2.png" alt="Musa 2" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (3).png" alt="Musa 3" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa3.png" alt="Musa 3" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (4).png" alt="Musa 4" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa4.png" alt="Musa 4" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (5).png" alt="Musa 5" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa5.png" alt="Musa 5" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (6).png" alt="Musa 6" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa6.png" alt="Musa 6" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (7).png" alt="Musa 7" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa7.png" alt="Musa 7" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (8).png" alt="Musa 8" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa8.png" alt="Musa 8" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (9).png" alt="Musa 9" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa9.png" alt="Musa 9" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/musas/musa (10).png" alt="Musa 10" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/musas/musa10.png" alt="Musa 10" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
           </div>
