--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="col-lg-6 text-center image-block">
-            <img src="images/nutricionista/nutricionista (2).png" alt="Nutricionista" class="img-fluid rounded-4 hero-photo" />
+            <img src="images/nutricionista/nutricionista2.png" alt="Nutricionista" class="img-fluid rounded-4 hero-photo" />
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
           <div class="col-lg-6 image-block">
             <div class="image-card">
               <img
-                src="images/nutricionista/nutricionista (3).png"
+                src="images/nutricionista/nutricionista3.png"
                 alt="Nutricionista em atendimento"
                 class="img-fluid rounded-4"
                 loading="lazy"
@@ -404,82 +404,82 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="carousel-image">
-                <img src="images/antesDepois/antesdepois16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
+                <img src="images/antesdepois/antesdepois16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
               </div>
             </div>
           </div>
