--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Consultoria nutricional personalizada para saúde, estética e performance com MT Ferre Nutrição." />
-    <title>Nutricionista - Consultoria Personalizada</title>
+    <title>Matheus Ferreira</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="#topo">
           <img src="images/logo.png" alt="Logo MT Ferre Nutrição" class="logo" />
-          <span>MT Ferre Nutrição</span>
+          <span>Matheus Ferreira Nutrição</span>
         </a>
         <button
           class="navbar-toggler"
@@ -57,7 +57,7 @@
             <p class="text-uppercase small text-beige fw-bold">Consultoria Online & Presencial</p>
             <h1 class="display-5 fw-bold">Nutrição personalizada para saúde, estética e performance.</h1>
             <p class="lead mt-3">
-              Mais de 500 pacientes atendidos em 6 países diferentes. Planos nutricionais personalizados,
+              Mais de 200 mil pacientes atendidos em 8 países diferentes. Planos nutricionais personalizados,
               acompanhamento humanizado e foco em resultados sustentáveis.
             </p>
             <div class="d-flex flex-wrap gap-3 mt-4 justify-content-center">
@@ -71,6 +71,107 @@
         </div>
       </div>
     </header>
+
+    <section id="resultados" class="py-5 section-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="section-title">Antes e Depois</h2>
+          <p class="section-subtitle">Resultados reais de pacientes acompanhados.</p>
+        </div>
+        <div id="antesDepoisCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <img src="images/resultados/resultado16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#antesDepoisCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#antesDepoisCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Próximo</span>
+          </button>
+        </div>
+      </div>
+    </section>
 
     <section id="sobre" class="py-5 section-light">
       <div class="container">
@@ -89,14 +190,14 @@
 
           <div class="col-lg-6 content-block">
             <h2 class="section-title">Quem sou eu?</h2>
-            <p>
+            <p class="quemsoueu lead mt-3">
               Formado em Nutrição e pós-graduado em Nutrição Esportiva pela UNIGUAÇU,
               com cursos de extensão em Nutrição Comportamental e Nutrição Feminina.
               Com mais de 500 pacientes atendidos em 6 países diferentes, meu foco é
               oferecer soluções nutricionais personalizadas, equilibrando saúde e
               bem-estar com metas estéticas e de performance.
             </p>
-            <p class="fw-semibold">Especialista em comportamento humano.</p>
+            <p class="text-uppercase small text-beige fw-bold">Especialista em comportamento humano.</p>
 
             <div class="info-grid mt-4">
               <div class="card-custom info-card">
@@ -353,10 +454,6 @@
           </div>
         </div>
 
-        <!--<div class="payment-box mb-5">
-          <p class="text-beige mb-0">Todos os valores serão aceitos no cartão com acréscimo de 5%.</p>
-        </div>-->
-
         <h3 class="section-subheading mb-4">Pacotes Diamante</h3>
         <div class="card-custom highlight-card">
           <p class="text-uppercase small text-accent fw-bold">Pacote disponível para qualquer lugar do Rio de Janeiro</p>
@@ -390,107 +487,6 @@
             No cartão tem 5% de acréscimo e parcela na quantidade de vezes proporcional aos meses
             escolhidos.
           </p>
-        </div>
-      </div>
-    </section>
-
-    <section id="resultados" class="py-5 section-light">
-      <div class="container">
-        <div class="text-center mb-5">
-          <h2 class="section-title">Antes e Depois</h2>
-          <p class="section-subtitle">Resultados reais de pacientes acompanhados.</p>
-        </div>
-        <div id="antesDepoisCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado1.png" alt="Antes e depois 1" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado2.png" alt="Antes e depois 2" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado3.png" alt="Antes e depois 3" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado4.png" alt="Antes e depois 4" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado5.png" alt="Antes e depois 5" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado6.png" alt="Antes e depois 6" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado7.png" alt="Antes e depois 7" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado8.png" alt="Antes e depois 8" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado9.png" alt="Antes e depois 9" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado10.png" alt="Antes e depois 10" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado11.png" alt="Antes e depois 11" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado12.png" alt="Antes e depois 12" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado13.png" alt="Antes e depois 13" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado14.png" alt="Antes e depois 14" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado15.png" alt="Antes e depois 15" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-image">
-                <img src="images/resultados/resultado16.png" alt="Antes e depois 16" class="img-fluid rounded-3" loading="lazy" />
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#antesDepoisCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#antesDepoisCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Próximo</span>
-          </button>
         </div>
       </div>
     </section>
@@ -566,79 +562,9 @@
       </div>
     </section>
 
-    <section id="insights" class="py-5 section-dark">
-      <div class="container">
-        <div class="text-center mb-5">
-          <h2 class="section-title">Insights do Instagram</h2>
-          <p class="section-subtitle">Impacto digital e engajamento da audiência.</p>
-        </div>
-        <div class="row g-4">
-          <div class="col-lg-4">
-            <div class="card-custom metric-card h-100">
-              <h5>Total de Seguidores</h5>
-              <p class="display-6">10,7 mil</p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card-custom metric-card h-100">
-              <h5>Média de Visualizações</h5>
-              <p class="display-6">8.107.246</p>
-              <p class="small">8,9% seguidores e 91,1% não seguidores</p>
-              <p class="small">Reels: 96,9% | Stories: 2,8% | Posts: 0,3%</p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card-custom metric-card h-100">
-              <h5>Média de Interações</h5>
-              <p class="display-6">364.758</p>
-              <p class="small">2,4% seguidores e 97,6% não seguidores</p>
-              <p class="small">Reels: 98,5% | Stories: 1,4% | Publicações: 0,1%</p>
-            </div>
-          </div>
-        </div>
-        <div class="row g-4 mt-2">
-          <div class="col-lg-6">
-            <div class="card-custom metric-card h-100">
-              <h5>Público</h5>
-              <ul>
-                <li>51,6% homens</li>
-                <li>48,4% mulheres</li>
-              </ul>
-              
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="card-custom metric-card h-100">
-              <h5>Faixa etária</h5>
-              <ul>
-                <li>18-24: 32,7%</li>
-                <li>25-34: 36,5%</li>
-                <li>35-44: 21,3%</li>
-                <li>45+: 7,0%</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="contato" class="py-5">
       <div class="container">
-        <!--<div class="row g-4 align-items-center">
-          <div class="col-lg-6">
-           <h2 class="section-title">Vamos transformar sua saúde?</h2>
-           <p>Planos personalizados, acompanhamento contínuo e foco em resultados duradouros.</p>
-            <div class="contact-card card-custom-dark">
-              <div class="d-flex flex-wrap gap-3">
-                <a class="btn btn-icon" href="https://wa.me/5521994380258" target="_blank" aria-label="Fale no WhatsApp">
-                  <i class="bi bi-whatsapp"></i>
-                </a>
-                <a class="btn btn-icon btn-outline-light" href="https://instagram.com/mtferre" target="_blank" aria-label="Siga no Instagram">
-                  <i class="bi bi-instagram"></i>
-                </a>
-              </div>
-            </div>-->
-          </div>
+        </div>
           <div>
             <div class="cta-card">
               <h4>Vamos transformar sua saúde?</h4>
@@ -657,8 +583,7 @@
         <div class="col-lg-4 col-md-6">
           <a class="d-flex align-items-center gap-2 mb-3 text-decoration-none" href="#topo">
             <img src="images/logoNome.png" alt="Logo" class="logo" />
-            <!--<span class="h5 mb-0 text-white fw-bold">MT Ferre Nutrição</span>-->
-          </a>
+            </a>
           <p class="text-white-50 small">
             Transformando vidas através da nutrição personalizada. Atendimento presencial no Rio de Janeiro e online para o mundo todo.
           </p>
