--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <section id="sobre" class="py-5 section-light">
+   <section id="sobre" class="py-5 section-dark text-white">
       <div class="container">
         <div class="row align-items-center g-4">
           
@@ -189,35 +189,35 @@
           </div>
 
           <div class="col-lg-6 content-block">
-            <h2 class="section-title">Quem sou eu?</h2>
-            <p class="quemsoueu lead mt-3">
+            <h2 class="section-title text-white">Quem sou eu?</h2>
+            <p>
               Formado em Nutrição e pós-graduado em Nutrição Esportiva pela UNIGUAÇU,
               com cursos de extensão em Nutrição Comportamental e Nutrição Feminina.
               Com mais de 500 pacientes atendidos em 6 países diferentes, meu foco é
               oferecer soluções nutricionais personalizadas, equilibrando saúde e
               bem-estar com metas estéticas e de performance.
             </p>
-            <p class="text-uppercase small text-beige fw-bold">Especialista em comportamento humano.</p>
+            <p class="fw-semibold">Especialista em comportamento humano.</p>
 
             <div class="info-grid mt-4">
-              <div class="card-custom info-card">
+              <div class="card-custom info-card text-dark">
                 <h5>Consulta</h5>
-                <p>Online & Presencial</p>
+                <p class="mb-0">Online & Presencial</p>
               </div>
 
-              <div class="card-custom info-card">
+              <div class="card-custom info-card text-dark">
                 <h5>Emagrecimento & Hipertrofia</h5>
-                <p>Planos que se ajustam a diferentes metas e fases.</p>
+                <p class="mb-0">Planos que se ajustam a diferentes metas e fases.</p>
               </div>
 
-              <div class="card-custom info-card">
+              <div class="card-custom info-card text-dark">
                 <h5>Atendimento global</h5>
-                <p>Pacientes em 6 países com acompanhamento completo.</p>
+                <p class="mb-0">Pacientes em 6 países com acompanhamento completo.</p>
               </div>
 
-              <div class="card-custom info-card">
+              <div class="card-custom info-card text-dark">
                 <h5>Personalização total</h5>
-                <p>Suporte humano, plano flexível e foco em resultados.</p>
+                <p class="mb-0">Suporte humano, plano flexível e foco em resultados.</p>
               </div>
             </div>
           </div>
