--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
             <div class="d-flex flex-wrap gap-3 mt-4 justify-content-center">
               <a class="btn btn-primary" href="#pacotes">Ver pacotes</a>
-              <a class="btn btn-outline-light" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank">Fale no WhatsApp</a>
+              <a class="btn btn-outline-light" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank">Fale no WhatsApp</a>
             </div>
           </div>
           <div class="col-lg-6 text-center image-block">
@@ -345,7 +345,7 @@
                 <li>Reavaliação dos resultados após 40 dias</li>
               </ul>
               <p class="plan-price">R$ 250,00</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Mensal" target="_blank">
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Mensal" target="_blank">
                 Escolher esse
               </a>
             </div>
@@ -362,7 +362,7 @@
                 <li>Novo Planejamento após a reavaliação</li>
               </ul>
               <p class="plan-price">R$ 450,00 (R$ 225 mensal)</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Bimestral" target="_blank">
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Bimestral" target="_blank">
                 Escolher esse
               </a>
             </div>
@@ -379,7 +379,7 @@
                 <li>Novo Planejamento após a reavaliação</li>
               </ul>
               <p class="plan-price">R$ 650,00 (R$ 216,67 mensal)</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Trimestral" target="_blank">
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Trimestral" target="_blank">
                 Escolher esse
               </a>
             </div>
@@ -396,7 +396,7 @@
                 <li>Novo Planejamento após a reavaliação</li>
               </ul>
               <p class="plan-price">R$ 1.260,00 (R$ 210 mensal)</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Semestral" target="_blank">
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Semestral" target="_blank">
                 Escolher esse
               </a>
             </div>
@@ -413,7 +413,7 @@
                 <li>Novo Planejamento após a reavaliação</li>
               </ul>
               <p class="plan-price">R$ 2.500,00 (R$ 208,33 mensal)</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Anual" target="_blank">
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Anual" target="_blank">
                 Escolher esse
               </a>
             </div>
@@ -428,7 +428,7 @@
               <p>Rua Dr. Mendonça Sobrinho, 129 Itaboraí</p>
               <p>Um ambiente acolhedor para transformar sua saúde com um plano alimentar estratégico e acompanhamento completo.</p>
               <p class="plan-price">R$ 350,00</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Itabora%C3%AD%20Presencial" target="_blank">Escolher esse</a>
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Itabora%C3%AD%20Presencial" target="_blank">Escolher esse</a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -437,7 +437,7 @@
               <p>Rua Visconde de Pirajá, 595, Ipanema, Rio de Janeiro RJ, 22410-003, Brasil</p>
               <p>Atendimento Premium para quem deseja exclusividade e um serviço de alta performance</p>
               <p class="plan-price">R$ 550,00</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Ipanema%20Presencial" target="_blank">Escolher esse</a>
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Ipanema%20Presencial" target="_blank">Escolher esse</a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -449,7 +449,7 @@
                 <li>Atualização do Planejamento Alimentar a cada 30 dias durante os 6 meses</li>
               </ul>
               <p class="plan-price">R$ 1.200,00</p>
-              <a class="btn btn-primary w-100" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20H%C3%ADbrido" target="_blank">Escolher esse</a>
+              <a class="btn btn-primary w-100" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20H%C3%ADbrido" target="_blank">Escolher esse</a>
             </div>
           </div>
         </div>
@@ -475,7 +475,7 @@
           </ul>
           <div class="d-flex flex-wrap align-items-center justify-content-between gap-3 mt-4">
             <p class="text-accent mb-0 fw-bold">Todos os valores serão aceitos no cartão com acréscimo de 5%.</p>
-            <a class="btn btn-primary" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Diamante" target="_blank">Quero o plano Diamante</a>
+            <a class="btn btn-primary" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20desejo%20adquirir%20o%20plano%20Diamante" target="_blank">Quero o plano Diamante</a>
           </div>
         </div>
         <div class="payment-box mb-5">
@@ -569,7 +569,7 @@
             <div class="cta-card">
               <h4>Vamos transformar sua saúde?</h4>
               <p>Planos personalizados, acompanhamento contínuo e foco em resultados duradouros.</p>
-              <a class="btn btn-primary" href="https://wa.me/5521994380258?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank">Agendar consulta</a>
+              <a class="btn btn-primary" href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank">Agendar consulta</a>
             </div>
           </div>
         </div>
@@ -609,7 +609,7 @@
             Acompanhe dicas diárias no Instagram ou tire suas dúvidas diretamente no WhatsApp.
           </p>
           <div class="d-flex gap-3">
-            <a href="https://wa.me/5521994380258" target="_blank" class="social-btn whatsapp">
+            <a href="https://wa.me/5521994380268?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20quero%20agendar%20uma%20consulta" target="_blank" class="social-btn whatsapp">
               <i class="bi bi-whatsapp"></i>
             </a>
             <a href="https://instagram.com/mtferre" target="_blank" class="social-btn instagram">
